examples/test/testpolicy4692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4692
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key6: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value47
          key29: value21
      podSelector:
        matchLabels:
          key48: value10
          key39: value2
          key27: value8
